--- a/src/app/features/entities/components/entity/view-entity/view-entity2.component.html
+++ b/src/app/features/entities/components/entity/view-entity/view-entity2.component.html
@@ -24,7 +24,7 @@
                     [partyAccountDetails]="partyAccountDetails"
                     [bankDetails]="bankDetails"
                     [wealthAmlDetails]="wealthAmlDetails"
-                    (fetchPaymentDetails)="getPaymentDetails()"
+                    [nokList]="nokDetails"
                     (refreshData)="refreshData()"
                   ></app-entity-other-details>
                 </ng-container>
