--- a/src/app/features/gis/components/policy/components/import-risks/import-risks.component.css
+++ b/src/app/features/gis/components/policy/components/import-risks/import-risks.component.css
@@ -56,13 +56,15 @@
 .custom-file-upload {
     display: inline-block;
     padding: 6px ;
-    width: 133%;
-    margin-left: 14px;
+    /* width: 133%; */
+    /* margin-left: 14px; */
     cursor: pointer;
     background-color: #00529B; /* Blue color */
     color: #fff; /* White text color */
     border: solid;
-    border-radius: 0.375rem;
+    border-radius: 8px;
+    line-height: 25px;
+    margin-top: -3px;
   }
   
   .custom-file-upload:hover {
