--- a/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
+++ b/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
@@ -58,37 +58,47 @@
                                 <p class="summary-label">Subclass</p>
                             </div>
                             <div class="col-8" id="value">
-                                <p-dropdown [options]="allMatchingSubclasses" optionValue="code" optionLabel="description"
-                                formControlName="subClassCode" [placeholder]="'subclass'" [filterBy]="'description'" [filter]="true"></p-dropdown>
+                                <p-dropdown [options]="allMatchingSubclasses" optionValue="code" (onChange)="onSubclassSelected($event.value)"
+                                    optionLabel="description" formControlName="subClassCode" [placeholder]="'subclass'"
+                                    [filterBy]="'description'" [filter]="true"></p-dropdown>
                             </div>
                         </div>
                     </div>
                     <div class=" mb-1 col-sm-4 col-12">
-                        
+
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
-                       
+
 
                     </div>
                     <div class="col-sm-9 d-flex justify-content-end">
                         <div class="row  mb-2">
 
                             <div class="col-sm-3 me-4">
-                                <button type="button" class="btn btn-primary" id="templateButton" (click)="downloadCSVTemplate()" >{{'gis.policy.export_template' |
+                                <button type="button" class="btn btn-primary" id="templateButton"
+                                    (click)="downloadCSVTemplate()">{{'gis.policy.export_template' |
                                     translate}}</button>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-3 ms-4">
                                 <!-- <button type="button" class="btn btn-primary" id="templateButton" >{{'gis.policy.upload_template' |
                                     translate}}</button> -->
+                                <!-- Hidden file input -->
+                                <input type="file" id="fileInput" accept=".csv" style="display:none;"
+                                    (change)="onFileSelected($event)">
 
-                                    <label for="fileInput" class="custom-file-upload mb-4">{{'gis.policy.upload_template' |translate}}</label>
+                                <!-- Button to trigger file input -->
+                                <button type="button" class="btn btn-primary" id="templateButton"
+                                    onclick="document.getElementById('fileInput').click()">
+                                    {{'gis.policy.upload_template' | translate}}
+                                </button>
 
-                                   
-                                  
-                              
-                                    <input type="file" id="fileInput" accept=".csv" (change)="onFileSelected($event)">
+
+                                <!-- <label for="fileInput" class="custom-file-upload ">{{'gis.policy.upload_template'
+                                    |translate}}</label>
+
+                                <input type="file" id="fileInput" accept=".csv" (change)="onFileSelected($event)"> -->
                             </div>
                             <div class="col-sm-3" style="width:auto">
                                 <button type="button" id="icon" class="btn btn-success" data-bs-toggle="modal"
@@ -114,49 +124,49 @@
 
                     </div>
                 </div>
-                <p-table  dataKey="code" [value]="importedRisk"
-                [tableStyle]="{ 'min-width': '300px' }" [paginator]="true" selectionMode="single"
-                 styleClass="p-datatable-sm"
-                responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true" [rows]="10">
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th>Client ID</th>
-                        <th>Client name</th>
-                        <th>WEF</th>
-                        <th>WET</th>
-                        <th>Risk duplicated</th>
-                        <th>Class</th>
-                        <th>Cover type</th>
-                        <th>Premium</th>
-                        <th>Taxes</th>
+                <p-table dataKey="code" [value]="importedRisk" [tableStyle]="{ 'min-width': '300px' }"
+                    [paginator]="true" selectionMode="single" styleClass="p-datatable-sm" responsiveLayout="scroll"
+                    class='ui-datatable' [autoLayout]="true" [rows]="10">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Client ID</th>
+                            <th>Client name</th>
+                            <th>WEF</th>
+                            <th>WET</th>
+                            <th>Risk duplicated</th>
+                            <th>Class</th>
+                            <th>Cover type</th>
+                            <th>Premium</th>
+                            <th>Taxes</th>
 
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-importedRisk >
-                    <tr>
-                       
-                        <td>{{importedRisk.clientId}}</td>
-                        <td>{{importedRisk.clientName}}</td>
-                        <td>{{importedRisk.WEF}}</td>
-                        <td>{{importedRisk.WET}}</td>
-                        <td>{{importedRisk.riskDuplicated}}</td>
-                        <td>{{importedRisk.class}}</td>
-                        <td>{{importedRisk.coverType}}</td>
-                        <td>{{importedRisk.premium}}</td>
-                        <td>{{importedRisk.taxes}}</td>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-importedRisk>
+                        <tr>
 
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="emptymessage">
-                    <tr>
-                        <td colspan="9" style="padding: 20px; text-align:center " id="empty">{{'gis.policy.no_data_to_display' | translate}}</td>
-                    </tr>
-                </ng-template>
-            </p-table>
+                            <td>{{importedRisk.INSURED_ID}}</td>
+                            <td>{{importedRisk.INSURED_NAME}}</td>
+                            <td>{{importedRisk.EFF_DATE}}</td>
+                            <td>{{importedRisk.EXP_DATE}}</td>
+                            <td></td>
+                            <td></td>
+                            <td>{{importedRisk.COVER_TYPE}}</td>
+                            <td>{{importedRisk.BUT_CHARGE_PREMIUM}}</td>
+                            <td></td>
+
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="emptymessage">
+                        <tr>
+                            <td colspan="9" style="padding: 20px; text-align:center " id="empty">
+                                {{'gis.policy.no_data_to_display' | translate}}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
             </div>
         </div>
         <div class="d-flex justify-content-end mt-4">
-            <button type="button" class="btn btn-primary" >{{'gis.policy.next' |
+            <button type="button" class="btn btn-primary">{{'gis.policy.next' |
                 translate}}</button>
         </div>
     </div>
