--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -492,9 +492,7 @@
                                 </ng-template>
 
                                 <ng-template pTemplate="body" let-riskDetails let-ri="rowIndex">
-                                    <tr [pSelectableRow]="riskDetails"
-                                        [class.p-highlight]="riskDetails === selectedRisk"
-                                        (click)="togglePremiumDetails()">
+                                    <tr [pSelectableRow]="riskDetails" [class.p-highlight]="riskDetails === selectedRisk" (click)="togglePremiumDetails();getRiskClauses()">
                                         <td>{{riskDetails.propertyId}}</td>
                                         <td></td>
                                         <td>{{riskDetails.propertyDescription}}</td>
@@ -1722,7 +1720,7 @@
 
                                                 <div class="col-3" *ngIf="isRiskClauseDetailsOpen">
                                                     <button type="button" id="icon" class="btn btn-primary"
-                                                        data-bs-toggle="modal" data-bs-target="#addSection" title="Add">
+                                                        data-bs-toggle="modal" data-bs-target="#riskClausesModal" title="Add">
                                                         <i class="fa-solid fa-plus"></i>
                                                     </button>
                                                 </div>
@@ -1770,8 +1768,9 @@
                                                 <th>Header</th>
                                                 <th>Clause</th>
                                                 <th></th>
-                                                <th>{{'gis.quotation.editable' | translate}}</th>
                                                 <th>Type</th>
+                                                <th>{{'gis.quotation.editable' | translate}}</th>
+                                               
                                             </tr>
                                         </ng-template>
                                         <ng-template pTemplate="body" let-selectedClauseList let-editing="editing"
@@ -1816,14 +1815,28 @@
                                                         <!-- Helper icon added next to the wording column -->
                                                     </p-cellEditor>
                                                 </td>
+                                                
                                                 <td>
                                                     <button pButton pRipple type="button"
                                                         (click)="openHelperModal(selectedClauseList)"
                                                         icon="pi pi-info-circle"
                                                         class="p-button-rounded p-button-text"></button>
                                                 </td>
-                                                <td *ngIf="selectedClauseList.is_editable  !== 'Y'"
-                                                    style="padding-left: 24px;">
+                                                <td>
+                                                    <p-cellEditor>
+                                                        <ng-template pTemplate="input">
+                                                            <input pInputText type="text"
+                                                                [(ngModel)]="selectedClauseList.type"
+                                                                class="form-control form-control-sm"
+                                                                [ngModelOptions]="{standalone: true}">
+                                                        </ng-template>
+                                                        <ng-template pTemplate="output">
+                                                            {{selectedClauseList.type}}
+                                                        </ng-template>
+                                                        <!-- Helper icon added next to the wording column -->
+                                                    </p-cellEditor>
+                                                </td>
+                                                <td *ngIf="selectedClauseList.is_editable  !== 'Y'" style="padding-left: 24px;">
                                                     -- </td>
                                                 <td *ngIf="selectedClauseList.is_editable  === 'Y'">
                                                     <div class="flex align-items-center justify-content-center gap-2">
@@ -1838,7 +1851,7 @@
                                                             class="p-button-rounded p-button-text p-button-danger"></button>
                                                     </div>
                                                 </td>
-                                                <td></td>
+                                               
                                             </tr>
                                             <!-- Modal for each row -->
                                             <p-dialog [(visible)]="selectedClauseList.showHelperModal" [modal]="false"
@@ -1999,6 +2012,79 @@
                             </div>
 
                         </div>
+
+
+                        <!-- RISK CLAUSES MODAL -->
+                     
+                        <div class="modal fade" id="riskClausesModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                               
+                                <div class="modal-body">
+                                    <button type="button" #closebutton class="float-end btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                                    <p class="modalTitle" id="selectClient">{{'gis.policy.select_risk_clauses'
+                                        | translate}}
+                                    </p>
+                                </div>
+                                <p-table [value]="selectedClauseList" dataKey="code" editMode="row"
+                                 styleClass="p-datatable-sm"
+                                responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true">
+                                <ng-template pTemplate="header">
+                                    <tr>
+                                        <th><p-tableHeaderCheckbox /></th>
+                                        <th>ID</th>
+                                        <th>Description</th>
+                                        
+                                        
+                                       
+                                    </tr>
+                                </ng-template>
+                                <ng-template pTemplate="body" let-selectedClauseList let-editing="editing"
+                                    let-ri="rowIndex">
+                                    <tr
+                                        [pEditableRow]="selectedClauseList">
+                                        <td>
+                                            <p-tableCheckbox [value]="selectedClauseList" />
+                                        </td>
+                                     <td>{{selectedClauseList.short_description}}</td>
+
+                                        <td style=" white-space: nowrap;
+                              overflow: hidden;
+                              text-overflow: ellipsis;
+                              overflow-y: auto;
+                              max-width: 250px;" pTooltip="{{selectedClauseList.heading }}" tooltipPosition="top">{{selectedClauseList.heading}}</td>
+                                        
+                                        
+                                       
+                                       
+                                        
+                                       
+                                    </tr>
+                                    <!-- Modal for each row -->
+                                    <p-dialog [(visible)]="selectedClauseList.showHelperModal" [modal]="false"
+                                        [style]="{ 'width': '700px'}">
+                                        <ng-container *ngIf="selectedClauseList">
+                                            <div pResizable [ngStyle]="{'min-width.px': 200, 'min-height.px': 150}"
+                                                (onResize)="onResize($event)">
+                                                <p>{{ selectedClauseList.wording }}</p>
+                                            </div>
+                                        </ng-container>
+                                    </p-dialog>
+                                </ng-template>
+                            </p-table>
+                               
+                            <div class="d-flex justify-content-end mt-4 mb-4">
+                                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">{{'crm.save_details' |
+                                    translate}}</button>
+                            </div>
+                              
+                            </div>
+                            </div>
+                        </div>
+
+
+
                     </ng-container>
                     <ng-container *ngIf="selectedItem === 2">
                         <h5>Client DD details</h5>
