--- a/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
+++ b/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
@@ -1715,5 +1715,10 @@
                 </p-tabView>
             </div>
         </div>
+
+        <div class="d-flex justify-content-end">
+            <button type="button" class="btn btn-primary" (click)="next()">{{'gis.policy.next' |
+                translate}}</button>
+        </div>
     </div>
 </div>
