--- a/src/app/shared/components/stepper/horizontal-stepper/horizontal-stepper.component.css
+++ b/src/app/shared/components/stepper/horizontal-stepper/horizontal-stepper.component.css
@@ -196,9 +196,24 @@
 /*Implementing new design for the stepper*/
 .done {
   background-color:rgba(0, 82, 155, 0.6);
-} 
+}
 .step-active{
   background-color: var(--primary-color);
   border: 2px solid #FFF;
   box-shadow: 0 0 0 3px var(--primary-color);
+}
+
+.border-line {
+  width: 450%;
+  height: 1px;
+  background-color: var(--primary-color);
+  top: 18px;
+  left: 450%;
+  transform: translateX(-90%);
+  z-index: 0;
+  position: absolute;
+}
+
+.border-line.completed-step {
+  background-color: #007bff;
 }
