VQ-2386: View additional info on Entity-360-View

--- a/src/app/features/entities/components/entity/view-entity/entity-basic-info/entity-basic-info.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-basic-info/entity-basic-info.component.html
@@ -80,7 +80,7 @@
               </tr>
               <tr>
                 <td>Passport no.</td>
-                <th>xxx</th>
+                <th>[Not provided]</th>
               </tr>
               <tr *ngIf="partyAccountDetails?.clientDto?.occupation?.name">
                 <td>Occupation</td>
