--- a/src/app/features/entities/components/entity/view-entity/view-entity2.component.html
+++ b/src/app/features/entities/components/entity/view-entity/view-entity2.component.html
@@ -18,13 +18,16 @@
                 ></app-entity-basic-info>
               </ng-container>
 
-                <ng-container *ngIf="partyAccountDetails && bankDetails">
+<!--                <ng-container *ngIf="partyAccountDetails && bankDetails">-->
+                <ng-container *ngIf="partyAccountDetails">
                   <app-entity-other-details
                     [countries]="countries"
                     [partyAccountDetails]="partyAccountDetails"
                     [bankDetails]="bankDetails"
+                    [bankBranch]="bankBranchDetails"
                     [wealthAmlDetails]="wealthAmlDetails"
                     [nokList]="nokDetails"
+                    [states]="states"
                     (refreshData)="refreshData()"
                   ></app-entity-other-details>
                 </ng-container>
