VQ-2158: Claims Initiation

--- a/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.html
@@ -10,7 +10,7 @@
 
     <ng-container *ngIf="claimType">
 
-      <ng-container *ngIf="claimType === claimsType.MATURITIES">
+      <ng-container *ngIf="claimType === claimsType.NORMAL">
         <app-death-claims
           [claimInitForm]="claimInitForm"
           [claimClients]="claimClients$"
