Campaign management screens

--- a/src/app/features/crm/components/base-crm/base-crm.component.html
+++ b/src/app/features/crm/components/base-crm/base-crm.component.html
@@ -44,7 +44,9 @@
             <div class="card-header bg-transparent">Campaign Management</div>
             <div class="card-body">
               <ul class="custom-list slist">
-                <li>Campaign Management</li>
+                <li>
+                  <a href="home/crm/campaigns">Campaign Management</a>
+                </li>
                 <li>Leads and Potentials</li>
                 <li>Activity Management</li>
               </ul>
