Cheques mandate css updates

--- a/src/app/features/fms/cheque-authorization/cheque-authorization.component.css
+++ b/src/app/features/fms/cheque-authorization/cheque-authorization.component.css
@@ -85,3 +85,6 @@ ul.dropdown-menu li:hover {
   display: flex;
   align-items: center;
 }
+::ng-deep .p-datatable .p-datatable-thead > tr > th {
+  font-weight: 500;
+}
