--- a/src/app/features/fms/cheque-authorization/cheque-authorization.component.html
+++ b/src/app/features/fms/cheque-authorization/cheque-authorization.component.html
@@ -58,7 +58,7 @@
 
     <div class="card mb-3" style="box-shadow:none">
       <div class="card-header bg-transparent border-bottom-0 mb-0">
-        <span class="justify-content-center mt-3 text-primary">{{'fms.chequeAuth' | translate }}</span>
+        <span class="justify-content-center mt-3 text-primary fw-medium">{{'fms.chequeAuth' | translate }}</span>
       </div>
       <div class="card-body pt-0">
 
